terraform-aws-ha/natgw.tf
resource "aws_nat_gateway" "main" {
  allocation_id = aws_eip.nat.id
  subnet_id     = aws_subnet.public_a.id
  depends_on = [
    aws_internet_gateway.main,
    aws_eip.nat
  ]
}
